--- a/Guillaume/config.toml
+++ b/Guillaume/config.toml
@@ -1,3 +1,115 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+# Site settings
+baseurl = "https://guillaume.maiano.fr"
+languageCode = "fr-fr"
+title = "Guillaume Maiano - Développeur"
+theme = "hugo-artists-theme"
+
+[params]
+
+	# You can use Markdown syntax for urls [text](//url.to/source) for
+	# most longer texts.
+
+	# To provide some metadata for search engines feel free to add a few
+    # information about you and your website.
+	name = "Guillaume Maiano"
+	description = "Développeur - Applications Mobiles et Réalité Augmentée"
+
+	# Since this template is static, the contact form uses www.formspree.io as a
+	# proxy. The form makes a POST request to their servers to send the actual
+	# email. Visitors can send up to a 1000 emails each month for free.
+    #
+    # What you need to do for the setup?
+    #
+    # - set your email address under 'email' below
+    # - upload the generated site to your server
+    # - send a dummy email yourself to confirm your account
+    # - click the confirm link in the email from www.formspree.io
+    # - you're done. Happy mailing!
+	email = "guillaume@maiano.fr"
+
+
+	# Header an navigation
+	#
+	# To change the header background the 'hero-bg-jpg' at 'static/img'.
+	# Do the same with the logo ('logo.svg').
+	# But keep the original filename!
+	[params.header]
+		title = "Guillaume Maiano"
+		shortBio = "Développeur Mobile"
+
+
+	# About section
+	#
+	# Replace the 'avatar.jpg' under 'static/img' with your own image.
+	[params.about]
+		title = "Qui suis-je?"
+		bio = "**Guillaume réalise des applications mobiles et des expériences virtuelles.** Parmi ses sujets de prédilection figurent les écosystèmes Apple et Android, les mondes virtuels et la réalité augmentée. L'intelligence artificielle sous toutes ses formes est aussi un outil fascinant."
+
+		[[params.about.skills]]
+			name = "Créativité"
+			value = 8
+
+		[[params.about.skills]]
+			name = "Développement"
+			value = 8
+
+		[[params.about.skills]]
+			name = "Apple"
+			value = 9
+
+		[[params.about.skills]]
+			name = "Android"
+			value = 7
+
+		[[params.about.skills]]
+			name = "Résolution de problèmes"
+			value = 8
+
+		[[params.about.skills]]
+			name = "Expérience utilisateur"
+			value = 8
+
+		[[params.about.skills]]
+			name = "Dons artistiques"
+			value = 2
+
+		[[params.about.skills]]
+			name = "Organization"
+			value = 6
+
+	# Contact secion
+	[params.contact]
+		title = "Contact"
+
+		# The following social network icons are available:
+		# 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin'
+		# 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
+		[[params.contact.social]]
+			icon = "twitter"
+			link = "//twitter.com/gmaiano"
+
+		[[params.contact.social]]
+			icon = "youtube"
+			link = "//www.youtube.com/AirwingIT"
+
+		[[params.contact.social]]
+			icon = "linkedin"
+			link = "//www.linkedin.com/in/gmaiano"
+
+		[[params.contact.social]]
+			icon = "github"
+			link = "//github.com/guillaumemaiano"
+
+
+	[params.form]
+		title = "Avançons ensemble!"
+		# Form fields
+		name = "Vous êtes"
+		email = "Votre email"
+		message = "Comment puis-je vous aider?"
+		buttonText = "Envoyer"
+
+
+	[params.footer]
+		copyright = "Guillaume Maiano, 2017 -"
+                attribution = "Fait avec <a href='http://gohugo.io'>Hugo</a> - theme <a href='https://themes.gohugo.io/artists/'> Artists</a>"
